--- a/selvakumar3.html
+++ b/selvakumar3.html
@@ -19,7 +19,7 @@
 
 <!-- Hero Section -->
 <div class="hero">
-  <img src="D:\personal\image.png" alt="Selvakumar Ramasamy">
+  <img src="/image.png" alt="Selvakumar Ramasamy">
   <h1>Selvakumar Ramasamy</h1>
   <p class="lead">Vice President | IT Executive | Technology Transformation Leader</p>
   <p>Chennai, Tamil Nadu, India</p>
@@ -110,3 +110,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
