--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <h1>Selvakumar Ramasamy</h1>
   <p class="lead">Vice President | IT Executive | Technology Transformation Leader</p>
   <p>Chennai, Tamil Nadu, India</p>
+  <p>📞+91 9841125830, +91 8667745904</p>
+  <p>📧 btechselvakumar@gmail.com | LinkedIn: linkedin.com/in/selvakumar-ramasamy-01a39320</p>
 </div>
 
 <!-- About Section -->
@@ -54,16 +56,16 @@
   <!-- Certifications -->
   <h2 class="section-title">Certifications</h2>
   <ul>
-    <li>PMP</li>
-    <li>Agile Scrum Master (ASM®)</li>
-    <li>TOGAF</li>
-    <li>AI Tools Workshop 4.0</li>
+    <li><a href="https://certificates.simplicdn.net/share/thumb_3385599_1649782841.png" target="_blank">PMP</a></li>
+    <li><a href="https://certificates.simplicdn.net/share/thumb_4218566_1679013641.png" target="_blank">Agile Scrum Master (ASM®)</a></li>    
+    <li><a href="https://certificates.simplicdn.net/share/thumb_2769258.png" target="_blank">TOGAF</a></li>
+    <li><a href="https://verify.be10x.ai/certificate/2b2a6763-ab82-4b8a-866e-f97d6a39adc620533" target="_blank">AI Tools Workshop 4.0</a></li>
   </ul>
-
+  <p>Note: All are course completion certifications.</p>
   <!-- Awards -->
   <h2 class="section-title">Awards</h2>
   <ul>
-    <li>Lifetime Achievement Award – Vaken Technologies & Axseed Corporation (2025)</li>
+    <li><a href="https://www.linkedin.com/posts/vakentech_teamexcellence-customerappreciation-employeerecognition-activity-7383504363635433472-hXbm?utm_source=share&utm_medium=member_desktop&rcm=ACoAAART0VYBCJNcD3IAI_XfMAksMAtvuNsOwlA" target="_blank">Lifetime Achievement Award – Vaken Technologies & Axseed Corporation (2025)</a></li>
     <li>Best Manager Award – Works Applications</li>
   </ul>
 
@@ -110,4 +112,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
