--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
   <h1>Selvakumar Ramasamy</h1>
   <p class="lead">Vice President | IT Executive | Technology Transformation Leader</p>
   <p>Chennai, Tamil Nadu, India</p>
-  <p>📞+91 9841125830, +91 8667745904</p>
-  <p>📧 btechselvakumar@gmail.com | LinkedIn: linkedin.com/in/selvakumar-ramasamy-01a39320</p>
 </div>
 
 <!-- About Section -->
@@ -74,7 +72,15 @@
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">Vice President / General Manager – Vaken Technologies</h5>
-      <p class="card-text">Scaled SaaS portfolio, launched AI-driven AR glasses, optimized DevOps pipelines, saving $2M annually.</p>
+      <p class="card-text">Scaled enterprise SaaS portfolio across MDM and WES Folder, reducing IT costs by 22% and improving productivity by 18%.</p>
+      <p class="card-text">Directed 50+ engineers across global teams, implementing Agile frameworks that cut delivery cycles by 30%.</p>
+      <p class="card-text">Launched AI-driven AR glasses with ChatGPT for SoftBank, opening a new revenue stream and achieving 95% client adoption in pilot phase.</p>
+      <p class="card-text">Established DevOps pipelines (Jenkins, GIT, GCP, Azure) that improved deployment speed by 40% and reduced defects by 15%.</p>
+      <p class="card-text">Negotiated vendor contracts and optimized resource allocation, saving $2M annually in operational expenses.</p>
+      <p class="card-text">Promoted from Team Leader to Project Manager; led 640+ staff delivering HR SaaS for 1,200+ Japanese enterprises.</p>
+      <p class="card-text">Boosted productivity by 20% via automation and proprietary tools, reducing manual effort and accelerating delivery.</p>
+      <p class="card-text">Migrated Delphi legacy systems to Java ahead of schedule, cutting maintenance costs by 30%.</p>
+      <p class="card-text">Partnered with CMMI appraisal teams to elevate organizational maturity, achieving CMMI Level 3 compliance.</p>
     </div>
   </div>
   <div class="card">
@@ -112,5 +118,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
