Refactor index.html for improved structure and styling

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 <body>
 
 <!-- Hero Section -->
-<div class="hero">
-  <img src="/image.png" alt="Selvakumar Ramasamy">
-  <h1>Selvakumar Ramasamy</h1>
-  <p class="lead">Vice President | IT Executive | Technology Transformation Leader</p>
-  <p>Chennai, Tamil Nadu, India</p>
+<div class="hero d-flex align-items-center">
+  <img src="/image.png" alt="Selvakumar Ramasamy" class="me-4" style="max-width:200px; border-radius:10px;">
+  <div>
+    <h1>Selvakumar Ramasamy</h1>
+    <p class="lead">Vice President | IT Executive | Technology Transformation Leader</p>
+    <p>Chennai, Tamil Nadu, India</p>
+  </div>
 </div>
 
 <!-- About Section -->
@@ -118,6 +120,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
