--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 <!-- Hero Section -->
-<div class="hero d-flex align-items-center">
+<div class="hero d-flex justify-content-center align-items-center text-center" style="min-height:100vh;">
   <img src="/image.png" alt="Selvakumar Ramasamy" class="me-4" style="max-width:200px; border-radius:10px;">
   <div>
     <h1>Selvakumar Ramasamy</h1>
@@ -120,6 +120,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
