Refactor index.html to use two-column layout
Reorganized the layout into a two-column format and updated the Core Competencies section.

--- a/index.html
+++ b/index.html
@@ -27,89 +27,96 @@
   </div>
 </div>
 
-<!-- About Section -->
-<div class="container">
-  <h2 class="section-title">About Me</h2>
-  <p>Visionary IT leader with 22+ years of experience driving enterprise technology transformation, SaaS innovation, and large-scale project delivery. Proven record of scaling operations, leading global teams of 600+, and delivering multimillion-dollar initiatives in cloud, AI, and enterprise applications.</p>
-
-  <!-- Core Competencies -->
-  <h2 class="section-title">Core Competencies</h2>
+<!-- Two Column Layout -->
+<div class="container mt-5">
   <div class="row">
-    <div class="col-md-6">
+    
+    <!-- Left Panel -->
+    <div class="col-md-4">
+      <!-- Core Competencies -->
+      <h2 class="section-title">Core Competencies</h2>
+      <div class="row">
+        <div class="col-12">
+          <ul>
+            <li>IT Strategy & Governance</li>
+            <li>Enterprise SaaS & Cloud Transformation</li>
+            <li>Program & Portfolio Management</li>
+            <li>Agile & PMP Leadership</li>
+            <li>Cybersecurity & Risk Management</li>
+            <li>AI/ML Integration</li>
+            <li>Vendor & Stakeholder Management</li>
+            <li>Digital Transformation</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Certifications -->
+      <h2 class="section-title">Certifications</h2>
       <ul>
-        <li>IT Strategy & Governance</li>
-        <li>Enterprise SaaS & Cloud Transformation</li>
-        <li>Program & Portfolio Management</li>
-        <li>Agile & PMP Leadership</li>
+        <li><a href="https://certificates.simplicdn.net/share/thumb_3385599_1649782841.png" target="_blank">PMP</a></li>
+        <li><a href="https://certificates.simplicdn.net/share/thumb_4218566_1679013641.png" target="_blank">Agile Scrum Master (ASM®)</a></li>    
+        <li><a href="https://certificates.simplicdn.net/share/thumb_2769258.png" target="_blank">TOGAF</a></li>
+        <li><a href="https://verify.be10x.ai/certificate/2b2a6763-ab82-4b8a-866e-f97d6a39adc620533" target="_blank">AI Tools Workshop 4.0</a></li>
+      </ul>
+      <p>Note: All are course completion certifications.</p>
+
+      <!-- Awards -->
+      <h2 class="section-title">Awards</h2>
+      <ul>
+        <li><a href="https://www.linkedin.com/posts/vakentech_teamexcellence-customerappreciation-employeerecognition-activity-7383504363635433472-hXbm?utm_source=share&utm_medium=member_desktop&rcm=ACoAAART0VYBCJNcD3IAI_XfMAksMAtvuNsOwlA" target="_blank">Lifetime Achievement Award – Vaken Technologies & Axseed Corporation (2025)</a></li>
+        <li>Best Manager Award – Works Applications</li>
       </ul>
     </div>
-    <div class="col-md-6">
+
+    <!-- Right Panel -->
+    <div class="col-md-8">
+      <!-- About Section -->
+      <h2 class="section-title">About Me</h2>
+      <p>Visionary IT leader with 22+ years of experience driving enterprise technology transformation, SaaS innovation, and large-scale project delivery. Proven record of scaling operations, leading global teams of 600+, and delivering multimillion-dollar initiatives in cloud, AI, and enterprise applications.</p>
+
+      <!-- Experience -->
+      <h2 class="section-title">Professional Experience</h2>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Vice President / General Manager – Vaken Technologies</h5>
+          <p class="card-text">Scaled enterprise SaaS portfolio across MDM and WES Folder, reducing IT costs by 22% and improving productivity by 18%.</p>
+          <p class="card-text">Directed 50+ engineers across global teams, implementing Agile frameworks that cut delivery cycles by 30%.</p>
+          <p class="card-text">Launched AI-driven AR glasses with ChatGPT for SoftBank, opening a new revenue stream and achieving 95% client adoption in pilot phase.</p>
+          <p class="card-text">Established DevOps pipelines (Jenkins, GIT, GCP, Azure) that improved deployment speed by 40% and reduced defects by 15%.</p>
+          <p class="card-text">Negotiated vendor contracts and optimized resource allocation, saving $2M annually in operational expenses.</p>
+          <p class="card-text">Promoted from Team Leader to Project Manager; led 640+ staff delivering HR SaaS for 1,200+ Japanese enterprises.</p>
+          <p class="card-text">Boosted productivity by 20% via automation and proprietary tools, reducing manual effort and accelerating delivery.</p>
+          <p class="card-text">Migrated Delphi legacy systems to Java ahead of schedule, cutting maintenance costs by 30%.</p>
+          <p class="card-text">Partnered with CMMI appraisal teams to elevate organizational maturity, achieving CMMI Level 3 compliance.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Project Manager – IVTL Infoview Technologies</h5>
+          <p class="card-text">Led 640+ staff, migrated legacy systems, achieved CMMI Level 3 compliance.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Team Leader – IVTL Infoview Technologies</h5>
+          <p class="card-text">Delivered Nissan’s Order Management System, built POS solutions, improved procurement systems.</p>
+        </div>
+      </div>
+
+      <!-- Education -->
+      <h2 class="section-title">Education</h2>
       <ul>
-        <li>Cybersecurity & Risk Management</li>
-        <li>AI/ML Integration</li>
-        <li>Vendor & Stakeholder Management</li>
-        <li>Digital Transformation</li>
+        <li>B.Tech – IT | Vel MultiTech SRS Eng. College</li>
+        <li>Diploma in Computer Technology | The Christian Institute for Technical Education</li>
       </ul>
+
+      <!-- Contact -->
+      <h2 class="section-title">Contact</h2>
+      <p>📞 +91 9841125830, +91 8667745904</p>
+      <p>📧 <a href="mailto:btechselvakumar@gmail.com">btechselvakumar@gmail.com</a></p>
+      <p>🔗 <a href="https://linkedin.com/in/selvakumar-ramasamy-01a39320" target="_blank">LinkedIn Profile</a></p>
     </div>
   </div>
-
-  <!-- Certifications -->
-  <h2 class="section-title">Certifications</h2>
-  <ul>
-    <li><a href="https://certificates.simplicdn.net/share/thumb_3385599_1649782841.png" target="_blank">PMP</a></li>
-    <li><a href="https://certificates.simplicdn.net/share/thumb_4218566_1679013641.png" target="_blank">Agile Scrum Master (ASM®)</a></li>    
-    <li><a href="https://certificates.simplicdn.net/share/thumb_2769258.png" target="_blank">TOGAF</a></li>
-    <li><a href="https://verify.be10x.ai/certificate/2b2a6763-ab82-4b8a-866e-f97d6a39adc620533" target="_blank">AI Tools Workshop 4.0</a></li>
-  </ul>
-  <p>Note: All are course completion certifications.</p>
-  <!-- Awards -->
-  <h2 class="section-title">Awards</h2>
-  <ul>
-    <li><a href="https://www.linkedin.com/posts/vakentech_teamexcellence-customerappreciation-employeerecognition-activity-7383504363635433472-hXbm?utm_source=share&utm_medium=member_desktop&rcm=ACoAAART0VYBCJNcD3IAI_XfMAksMAtvuNsOwlA" target="_blank">Lifetime Achievement Award – Vaken Technologies & Axseed Corporation (2025)</a></li>
-    <li>Best Manager Award – Works Applications</li>
-  </ul>
-
-  <!-- Experience -->
-  <h2 class="section-title">Professional Experience</h2>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Vice President / General Manager – Vaken Technologies</h5>
-      <p class="card-text">Scaled enterprise SaaS portfolio across MDM and WES Folder, reducing IT costs by 22% and improving productivity by 18%.</p>
-      <p class="card-text">Directed 50+ engineers across global teams, implementing Agile frameworks that cut delivery cycles by 30%.</p>
-      <p class="card-text">Launched AI-driven AR glasses with ChatGPT for SoftBank, opening a new revenue stream and achieving 95% client adoption in pilot phase.</p>
-      <p class="card-text">Established DevOps pipelines (Jenkins, GIT, GCP, Azure) that improved deployment speed by 40% and reduced defects by 15%.</p>
-      <p class="card-text">Negotiated vendor contracts and optimized resource allocation, saving $2M annually in operational expenses.</p>
-      <p class="card-text">Promoted from Team Leader to Project Manager; led 640+ staff delivering HR SaaS for 1,200+ Japanese enterprises.</p>
-      <p class="card-text">Boosted productivity by 20% via automation and proprietary tools, reducing manual effort and accelerating delivery.</p>
-      <p class="card-text">Migrated Delphi legacy systems to Java ahead of schedule, cutting maintenance costs by 30%.</p>
-      <p class="card-text">Partnered with CMMI appraisal teams to elevate organizational maturity, achieving CMMI Level 3 compliance.</p>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Project Manager – IVTL Infoview Technologies</h5>
-      <p class="card-text">Led 640+ staff, migrated legacy systems, achieved CMMI Level 3 compliance.</p>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Team Leader – IVTL Infoview Technologies</h5>
-      <p class="card-text">Delivered Nissan’s Order Management System, built POS solutions, improved procurement systems.</p>
-    </div>
-  </div>
-
-  <!-- Education -->
-  <h2 class="section-title">Education</h2>
-  <ul>
-    <li>B.Tech – IT | Vel MultiTech SRS Eng. College</li>
-    <li>Diploma in Computer Technology | The Christian Institute for Technical Education</li>
-  </ul>
-
-  <!-- Contact -->
-  <h2 class="section-title">Contact</h2>
-  <p>📞 +91 9841125830, +91 8667745904</p>
-  <p>📧 <a href="mailto:btechselvakumar@gmail.com">btechselvakumar@gmail.com</a></p>
-  <p>🔗 <a href="https://linkedin.com/in/selvakumar-ramasamy-01a39320" target="_blank">LinkedIn Profile</a></p>
 </div>
 
 <!-- Footer -->
@@ -120,9 +127,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
