Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
   </style>
 </head>
 <body>
-  <!-- 1. Visual Branding -->
+  <!-- Visual Branding -->
   <div class="banner">
-    <img src="/image.png" alt="Selvakumar Ramasamy">
+    <img src="profile.jpg" alt="Selvakumar Ramasamy">
     <div class="headline">Selvakumar Ramasamy</div>
     <div class="elevator">
       Driving global technology transformation—one innovation at a time.
@@ -124,7 +124,6 @@
   </div>
 
   <div class="main">
-    <!-- 2. Conciseness -->
     <section>
       <h2><i class="fas fa-user icon"></i> Career Highlights</h2>
       <ul>
@@ -135,7 +134,6 @@
       </ul>
     </section>
 
-    <!-- 3. Quantifiable Outcomes -->
     <section>
       <h2><i class="fas fa-chart-line icon"></i> Measurable Achievements</h2>
       <ul class="achievements">
@@ -146,7 +144,6 @@
       </ul>
     </section>
 
-    <!-- 4. Personal Statement/Headline & 5. Action-Oriented Language -->
     <section>
       <h2><i class="fas fa-bullhorn icon"></i> What Drives Me</h2>
       <p>
@@ -160,7 +157,6 @@
       </ul>
     </section>
 
-    <!-- Concise Skills/Tech Stack -->
     <section>
       <h2><i class="fas fa-toolbox icon"></i> Skill Set & Technologies</h2>
       <ul class="skills">
@@ -174,7 +170,6 @@
       </ul>
     </section>
     
-    <!-- Concise Experience List -->
     <section>
       <h2><i class="fas fa-briefcase icon"></i> Experience</h2>
       <div class="roles">
@@ -215,7 +210,6 @@
       </div>
     </section>
 
-    <!-- Certifications/Awards Cards -->
     <section>
       <h2><i class="fas fa-certificate icon"></i> Certifications & Awards</h2>
       <div class="achievements">
@@ -225,7 +219,6 @@
       </div>
     </section>
 
-    <!-- Education -->
     <section>
       <h2><i class="fas fa-graduation-cap icon"></i> Education</h2>
       <ul>
@@ -234,7 +227,6 @@
       </ul>
     </section>
 
-    <!-- 7. Portfolio/Media Section -->
     <section>
       <h2><i class="fas fa-folder-open icon"></i> Portfolio & Media</h2>
       <div class="portfolio">
@@ -244,7 +236,6 @@
           <li><a href="#" target="_blank">Demo – POS/OMS Enterprise Deployment</a></li>
           <li><a href="#" target="_blank">Testimonial – Client/Industry Partner</a></li>
         </ul>
-        <!-- Add actual links, videos, images as needed -->
       </div>
     </section>
   </div>
