--- a/index.html
+++ b/index.html
@@ -8,236 +8,134 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: #f4f7fa;
-      color: #232a34;
+      font-family: 'Roboto', Arial, sans-serif;
+      background: #e8eaef;
+      color: #2e3440;
       margin: 0;
     }
-    .banner {
-      background: linear-gradient(90deg, #1867c0, #4fc3f7 90%);
-      color: #fff;
-      padding: 48px 0 24px 0;
-      text-align: center;
-      box-shadow: 0 3px 16px rgba(0,0,0,0.08);
+    .wrapper {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 12px;
     }
-    .banner img {
-      border-radius: 50%;
-      width: 110px;
-      border: 3px solid #fff;
-      margin-bottom: 16px;
-    }
-    .headline {
-      font-size: 2em;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .elevator {
-      font-size: 1.22em;
-      margin-bottom: 12px;
-      font-weight: 500;
-    }
-    .keywords {
-      font-size: 1em;
-      letter-spacing: 0.04em;
-      margin-bottom: 15px;
-      color: #e3f2fd;
-    }
-    .contact a {
-      color: #fff;
-      text-decoration: underline;
-      margin: 0 10px;
-    }
-    .main {
-      max-width: 950px;
-      margin: 38px auto 16px auto;
+    .profile-card {
       background: #fff;
-      border-radius: 14px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.06);
-      padding: 32px;
+      border-radius: 22px;
+      margin-bottom: 22px;
+      box-shadow: 0 4px 24px rgba(0,24,48,0.13);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 32px 28px 24px 28px;
+      text-align: center;
     }
-    section { margin-bottom: 28px; }
-    h2 {
-      color: #1867c0;
-      font-size: 1.3em;
+    .profile-img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 2px 10px rgba(24,103,192,0.08);
+      margin-bottom: 12px;
+    }
+    .profile-title {
+      font-size: 2em;
+      font-weight: 700;
       margin-bottom: 8px;
-      padding-bottom: 5px;
-      border-bottom: 2px solid #4fc3f7;
+      letter-spacing: 0.02em;
     }
-    .icon { color: #4fc3f7; margin-right: 8px; }
-    ul { padding-left: 20px; margin-top: 6px;}
-    .roles, .skills { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
-    .achievements, .portfolio {
-      background: #e3f2fd;
-      padding: 10px 20px;
-      border-radius: 6px;
-      margin-top: 5px;
-      box-shadow: 0 1px 4px rgba(32,132,225,0.05);
+    .tagline {
+      background: #1867c0;
+      color: #fff;
+      padding: 6px 16px;
+      border-radius: 14px;
+      font-size: 1em;
+      display:inline-block;
+      margin-bottom: 14px;
+    }
+    .info-row {
+      margin-bottom: 7px;
+      font-size: 1.05em;
+    }
+    .actions {
+      margin-top: 16px;
     }
     .btn-download {
-      display: inline-block;
       background: #1867c0;
       color: #fff;
       font-weight: bold;
-      padding: 11px 30px;
-      border-radius: 8px;
+      padding: 10px 26px;
+      border: none;
+      border-radius: 7px;
       text-decoration: none;
-      margin-top: 16px;
-      box-shadow: 0 2px 7px rgba(0,0,0,0.09);
+      font-size: 1em;
+      cursor: pointer;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.08);
     }
-    .btn-download:hover { background: #125ea6; }
-    .company-logos img {
-      height: 32px; margin: 0 8px;
-      vertical-align: middle;
-      opacity: 0.92;
+    .btn-download:hover { background: #15599c; }
+    .section-card {
+      background: #f7faff;
+      border-radius: 18px;
+      box-shadow: 0 2px 15px rgba(24,103,192,0.07);
+      margin-bottom: 22px;
+      padding: 20px 28px;
+      display: flex;
+      flex-direction: column;
     }
-    @media (max-width: 750px) {
-      .main { padding: 14px; }
-      .roles, .skills { grid-template-columns: 1fr; }
+    .section-title {
+      font-size: 1.28em;
+      font-weight: 600;
+      color: #1867c0;
+      margin-bottom: 12px;
+      display: flex;
+      align-items: center;
+    }
+    .section-title i {
+      margin-right: 9px;
+    }
+    ul, .section-list {
+      padding-left: 18px;
+      margin: 0;
+    }
+    li {
+      margin-bottom: 8px;
+    }
+    .experience-list {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+    .experience-list .job-title {
+      font-weight:600;
+      margin-top:12px;
+    }
+    .experience-list .job-meta {
+      font-size:0.97em;
+      color:#2984de;
+      margin-bottom:5px;
+    }
+    .achievements {
+      margin-bottom:5px;
+      font-size:0.98em;
+    }
+    @media (max-width: 600px) {
+      .profile-card, .section-card {padding: 12px 8px;}
+      .profile-img {width: 88px;height: 88px;}
+      .wrapper {max-width: 99vw;}
     }
   </style>
 </head>
 <body>
-  <!-- Visual Branding -->
-  <div class="banner">
-    <img src="profile.jpg" alt="Selvakumar Ramasamy">
-    <div class="headline">Selvakumar Ramasamy</div>
-    <div class="elevator">
-      Driving global technology transformation—one innovation at a time.
-    </div>
-    <div class="keywords">
-      Cloud | AI | SaaS | Strategic Leadership
-    </div>
-    <div class="contact">
-      <span><i class="fas fa-phone"></i> +91 9841125830</span>
-      <span><i class="fas fa-envelope"></i> btechselvakumar@gmail.com</span>
-      <span><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/selvakumar-ramasamy-01a39320" target="_blank">LinkedIn</a></span>
-    </div>
-    <a class="btn-download" href="Selvakumar_Ramasamy_Resume.pdf" download>
-      <i class="fas fa-download"></i> Download my resume – PDF
-    </a>
-    <div class="company-logos">
-      <!-- Example: Add logos for major career wins -->
-      <img src="softbank_logo.png" alt="SoftBank">
-      <img src="nissan_logo.png" alt="Nissan">
-      <img src="vaken_logo.png" alt="Vaken Technologies">
-    </div>
-  </div>
-
-  <div class="main">
-    <section>
-      <h2><i class="fas fa-user icon"></i> Career Highlights</h2>
-      <ul>
-        <li>22+ years leading technology transformation for global enterprises.</li>
-        <li>VP, IT Executive with expertise in Cloud, SaaS, AI, and large-scale project delivery.</li>
-        <li>Launched multimillion-dollar AI/AR product for market leader.</li>
-        <li>Managed teams up to 640+ members; led cross-functional global programs.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-chart-line icon"></i> Measurable Achievements</h2>
-      <ul class="achievements">
-        <li>Reduced development time by 20% through DevOps automation and process improvements.</li>
-        <li>Led SaaS deployment for 1,200+ Japanese enterprise clients.</li>
-        <li>Accelerated product delivery by building robust cloud pipelines (GCP, Azure).</li>
-        <li>Transformed organizational workflow—optimized team productivity and project quality.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-bullhorn icon"></i> What Drives Me</h2>
-      <p>
-        Empowering businesses and teams through visionary technology leadership—delivering real-world impact, driving innovation, and setting new standards in cloud and AI transformation.
-      </p>
-      <ul>
-        <li>Accelerated product delivery by automating DevOps pipelines.</li>
-        <li>Transformed legacy systems into modern, cloud-first architectures.</li>
-        <li>Optimized team workflows for higher productivity.</li>
-        <li>Led global teams to deliver mission-critical SaaS solutions.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-toolbox icon"></i> Skill Set & Technologies</h2>
-      <ul class="skills">
-        <li>C#, .Net, Javascript, HTML5, CSS</li>
-        <li>GCP, Azure, Cloud SQL</li>
-        <li>Jenkins, Git, Redmine</li>
-        <li>OpenAI GPT, AI-powered AR integrations</li>
-        <li>MDM, HR SaaS, OMS, POS, Baan ERP</li>
-        <li>.Net 3DES encryption, secure password tools</li>
-        <li>CMMI V3.0, QA frameworks</li>
-      </ul>
-    </section>
-    
-    <section>
-      <h2><i class="fas fa-briefcase icon"></i> Experience</h2>
-      <div class="roles">
-        <div>
-          <strong>General Manager – Product & Project Management</strong><br>
-          Vaken Technologies / IVTL Infoview Technologies Pvt. Ltd.<br>
-          Nov 2019 – Present
-          <ul class="achievements">
-            <li>Launched AI-driven AR smart glasses for SoftBank.</li>
-            <li>Directed 50+ engineers in global SaaS product design.</li>
-          </ul>
-        </div>
-        <div>
-          <strong>Project Manager / Team Leader</strong><br>
-          IVTL Infoview Technologies Pvt. Ltd.<br>
-          Mar 2014 – Oct 2019
-          <ul class="achievements">
-            <li>Managed HR SaaS for 1,200+ Japanese enterprises.</li>
-            <li>Led teams of 640+ engineers to hit milestones.</li>
-          </ul>
-        </div>
-        <div>
-          <strong>Team Leader – OMS, POS</strong><br>
-          IVTL Infoview Technologies Pvt. Ltd.<br>
-          Jul 2011 – Feb 2014
-          <ul class="achievements">
-            <li>Delivered multi-currency POS; optimized ERP integration.</li>
-          </ul>
-        </div>
-        <div>
-          <strong>Senior Software Developer</strong><br>
-          Health Plan Systems (I) Pvt. Ltd.<br>
-          Sep 2008 – May 2011
-          <ul class="achievements">
-            <li>.Net 3DES secure password tool delivered for 4+ projects.</li>
-          </ul>
-        </div>
+  <div class="wrapper">
+    <div class="profile-card">
+      <!-- Add your profile image -->
+      <img src="profile.jpg" alt="Selvakumar Ramasamy" class="profile-img">
+      <div class="profile-title">Selvakumar Ramasamy</div>
+      <div class="tagline">Driving global technology transformation—one innovation at a time.</div>
+      <div class="info-row"><strong>Chennai, Tamil Nadu, India</strong></div>
+      <div class="info-row">
+        <i class="fas fa-phone"></i> +91 9841125830 &nbsp; 
+        <i class="fas fa-envelope"></i> btechselvakumar@gmail.com
       </div>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-certificate icon"></i> Certifications & Awards</h2>
-      <div class="achievements">
-        <strong>PMP</strong> | <strong>Agile Scrum Master (ASM®)</strong> | TOGAF | AI Tools Workshop 4.0<br>
-        <em>Lifetime Achievement Award – Vaken Technologies & Axseed (2025)</em><br>
-        <em>Best Manager Award – Works Applications</em>
-      </div>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-graduation-cap icon"></i> Education</h2>
-      <ul>
-        <li>B.Tech – IT, Vel MultiTech SRS Eng. College</li>
-        <li>Diploma in Computer Technology, The Christian Institute for Technical Education</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-folder-open icon"></i> Portfolio & Media</h2>
-      <div class="portfolio">
-        <ul>
-          <li><a href="#" target="_blank">AI-driven AR Smart Glasses – Case Study</a></li>
-          <li><a href="#" target="_blank">Press Interview – Tech Leadership Award</a></li>
-          <li><a href="#" target="_blank">Demo – POS/OMS Enterprise Deployment</a></li>
-          <li><a href="#" target="_blank">Testimonial – Client/Industry Partner</a></li>
-        </ul>
-      </div>
-    </section>
-  </div>
-</body>
-</html>
+      <div class="info-row">
+        <i class="fab fa-linkedin"></i> 
+        <a href="https://linkedin.com/in/selvakumar-ramasamy-01a39320" target="_blank" style="color:#1867c0;">LinkedIn
