Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -138,4 +138,110 @@
       </div>
       <div class="info-row">
         <i class="fab fa-linkedin"></i> 
-        <a href="https://linkedin.com/in/selvakumar-ramasamy-01a39320" target="_blank" style="color:#1867c0;">LinkedIn
+        <a href="https://linkedin.com/in/selvakumar-ramasamy-01a39320" target="_blank" style="color:#1867c0;">LinkedIn</a>
+      </div>
+      <div class="actions">
+        <a class="btn-download" href="Selvakumar_Ramasamy_Resume.pdf" download>
+          <i class="fas fa-download"></i> Download Resume (PDF)
+        </a>
+      </div>
+    </div>
+    
+    <div class="section-card">
+      <div class="section-title"><i class="fas fa-star"></i> Career Highlights</div>
+      <ul>
+        <li>22+ years leading technology transformation for global enterprises.</li>
+        <li>VP, IT Executive specializing in Cloud, AI, SaaS, and project delivery.</li>
+        <li>Launched multimillion-dollar AI/AR product for SoftBank.</li>
+        <li>Managed global teams of 640+ members.</li>
+      </ul>
+    </div>
+
+    <div class="section-card">
+      <div class="section-title"><i class="fas fa-chart-line"></i> Measurable Achievements</div>
+      <ul>
+        <li>Reduced development time by <strong>20%</strong> through DevOps automation.</li>
+        <li>Led SaaS deployment for <strong>1,200+ enterprise clients</strong>.</li>
+        <li>Accelerated delivery via robust cloud pipelines (GCP, Azure).</li>
+        <li>Transformed workflow—optimized team productivity and project quality.</li>
+      </ul>
+    </div>
+
+    <div class="section-card">
+      <div class="section-title"><i class="fas fa-cogs"></i> Skill Set & Technologies</div>
+      <ul>
+        <li>C#, .Net, JavaScript, HTML5, CSS</li>
+        <li>GCP, Azure, Cloud SQL</li>
+        <li>Jenkins, Git, Redmine</li>
+        <li>OpenAI GPT, AI-powered AR integrations</li>
+        <li>MDM, HR SaaS, OMS, POS, Baan ERP</li>
+        <li>.Net 3DES encryption, secure password tools</li>
+        <li>CMMI V3.0, QA frameworks</li>
+      </ul>
+    </div>
+
+    <div class="section-card">
+      <div class="section-title"><i class="fas fa-briefcase"></i> Experience</div>
+      <ul class="experience-list">
+        <li>
+          <div class="job-title">General Manager – Product & Project Management</div>
+          <div class="job-meta">Vaken Technologies / IVTL Infoview Technologies Pvt. Ltd.<br>Nov 2019 – Present</div>
+          <div class="achievements">
+            Launched AI-driven AR smart glasses for SoftBank.<br>
+            Directed 50+ engineers in SaaS product design/delivery.
+          </div>
+        </li>
+        <li>
+          <div class="job-title">Project Manager / Team Leader</div>
+          <div class="job-meta">IVTL Infoview Technologies Pvt. Ltd.<br>Mar 2014 – Oct 2019</div>
+          <div class="achievements">
+            Managed HR SaaS for 1,200+ Japanese enterprises.<br>
+            Led teams of 640+ engineers to hit major milestones.
+          </div>
+        </li>
+        <li>
+          <div class="job-title">Team Leader – OMS, POS</div>
+          <div class="job-meta">IVTL Infoview Technologies Pvt. Ltd.<br>Jul 2011 – Feb 2014</div>
+          <div class="achievements">
+            Delivered multi-currency POS; optimized ERP integration.
+          </div>
+        </li>
+        <li>
+          <div class="job-title">Senior Software Developer</div>
+          <div class="job-meta">Health Plan Systems (I) Pvt. Ltd.<br>Sep 2008 – May 2011</div>
+          <div class="achievements">
+            .Net 3DES secure password tool delivered for 4+ projects.
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="section-card">
+      <div class="section-title"><i class="fas fa-certificate"></i> Certifications & Awards</div>
+      <ul>
+        <li>PMP | Agile Scrum Master (ASM®) | TOGAF | AI Tools Workshop 4.0</li>
+        <li>Lifetime Achievement Award – Vaken Technologies & Axseed (2025)</li>
+        <li>Best Manager Award – Works Applications</li>
+      </ul>
+    </div>
+
+    <div class="section-card">
+      <div class="section-title"><i class="fas fa-graduation-cap"></i> Education</div>
+      <ul>
+        <li>B.Tech – IT, Vel MultiTech SRS Eng. College</li>
+        <li>Diploma in Computer Technology, The Christian Institute for Technical Education</li>
+      </ul>
+    </div>
+
+    <div class="section-card">
+      <div class="section-title"><i class="fas fa-folder-open"></i> Portfolio & Media</div>
+      <ul>
+        <li><a href="#" target="_blank">AI-driven AR Smart Glasses – Case Study</a></li>
+        <li><a href="#" target="_blank">Press Interview – Tech Leadership Award</a></li>
+        <li><a href="#" target="_blank">Demo – POS/OMS Deployment</a></li>
+        <li><a href="#" target="_blank">Testimonial – Client/Industry Partner</a></li>
+      </ul>
+    </div>
+  </div>
+</body>
+</html>
