--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <div class="wrapper">
     <div class="profile-card">
       <!-- Add your profile image -->
-      <img src="profile.jpg" alt="Selvakumar Ramasamy" class="profile-img">
+      <img src="/image.png" alt="Selvakumar Ramasamy" class="profile-img">
       <div class="profile-title">Selvakumar Ramasamy</div>
       <div class="tagline">Driving global technology transformation—one innovation at a time.</div>
       <div class="info-row"><strong>Chennai, Tamil Nadu, India</strong></div>
@@ -140,11 +140,11 @@
         <i class="fab fa-linkedin"></i> 
         <a href="https://linkedin.com/in/selvakumar-ramasamy-01a39320" target="_blank" style="color:#1867c0;">LinkedIn</a>
       </div>
-      <div class="actions">
+      <!--<div class="actions">
         <a class="btn-download" href="Selvakumar_Ramasamy_Resume.pdf" download>
           <i class="fas fa-download"></i> Download Resume (PDF)
         </a>
-      </div>
+      </div>-->
     </div>
     
     <div class="section-card">
@@ -245,3 +245,4 @@
   </div>
 </body>
 </html>
+
