Refactor index.html for improved layout and design
Updated HTML structure and styling for the personal webpage.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .banner h3 {margin-bottom:20px;}
     .profile-img {width:140px; height:140px; border-radius:50%; border:4px solid #d4af37; box-shadow:0 0 12px #aaa; margin-top:-20px;}
     .nav-icons {display:flex; justify-content:center; gap:28px; margin-top:18px;}
-    .nav-icons i {font-size:2em; color:#003366; background:#fff; border-radius:50%; padding:10px; box-shadow:0 2px 8px #bdbdbd;}
+    .nav-icons i {font-size:1em; color:#003366; background:#fff; border-radius:50%; padding:10px; box-shadow:0 2px 8px #bdbdbd;}
     section {background:#fff; margin:36px auto; max-width:700px; border-radius:14px; box-shadow:0 2px 14px #ccd; padding:28px;}
     h2 {color:#003366; display:flex; align-items:center; gap:9px;}
     .metrics li {font-weight:600;}
@@ -72,7 +72,7 @@
   <section>
     <h2><i class="fas fa-cogs"></i> Skill Set & Technologies</h2>
     <ul>
-      <li>C#, .NET, JavaScript, HTML5, CSS</li>
+      <li>JAVA, C#, .NET, JavaScript, HTML5, CSS</li>
       <li>GCP, Azure, Cloud SQL</li>
       <li>Jenkins, Git, Redmine</li>
       <li>OpenAI GPT, AR, AI-powered integrations</li>
@@ -115,7 +115,7 @@
   <section>
     <h2><i class="fas fa-award"></i> Certifications & Awards</h2>
     <ul>
-      <li>PMP | Agile Scrum Master (ASM®) | TOGAF | AI Tools Workshop 4.0</li>
+      <li> <a href="https://certificates.simplicdn.net/share/thumb_3385599_1649782841.png"> PMP </a> | <a href="https://certificates.simplicdn.net/share/thumb_4218566_1679013641.png">Agile Scrum Master (ASM®)</a> | <a href="https://certificates.simplicdn.net/share/thumb_2769258.png"> TOGAF </a> | AI Tools Workshop 4.0</li>
       <li>Lifetime Achievement Award – Vaken Technologies & Axseed (2025)</li>
       <li>Best Manager Award – Works Applications</li>
     </ul>
@@ -148,4 +148,5 @@
   </footer>
 </body>
 </html>
+
 
