Revise profile details and enhance HTML structure
Updated the profile description and improved content structure.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <div class="banner">
     <img src="/image.png" alt="Selvakumar Ramasamy" class="profile-img">
     <h1>Selvakumar Ramasamy</h1>
-    <h3>Vice President | IT Transformation Leader | Executive</h3>
+    <h3>Technology leader building AI, AR, and cloud-native products | <br>
+      Vice President, Vaken Technologies | Driving enterprise SaaS, DevOps, and large-scale digital transformation</h3>
     <div>
       Chennai, Tamil Nadu, India
       <span style="margin-left:15px;"><i class="fas fa-phone"></i> +91 9841125830</span>
@@ -148,5 +149,6 @@
   </footer>
 </body>
 </html>
+
 
 
